<resources>
    <string name="app_name" translatable="false">Interface</string>
    <string name="home">Home</string>
    <string name="people">People</string>
    <string name="web_view_action_open_in_browser" translatable="false">Open in browser</string>
    <string name="web_view_action_share" translatable="false">Share link</string>
    <string name="web_view_action_share_subject" translatable="false">Shared a link</string>
    <string name="web_view_action_share_chooser" translatable="false">Share link</string>
    <string name="featured">FEATURED</string>
    <string name="popular">POPULAR</string>
    <string name="bookmarks">BOOKMARKS</string>
    <string name="goto_url_hint">Type a domain url</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="cant_access_your_account"><u>Can\u0027t access your account?</u></string>
    <string name="login_username_or_password_incorrect">Username or password incorrect.</string>
    <string name="logging_in">Logging in</string>
    <string name="search_hint"><i>Search for a place by name</i>\u00A0</string>
    <string name="search_loading">Loading places…</string>
    <string name="search_no_results">No places exist with that name</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="your_last_location">Your Last Location</string>
    <string name="online">Online</string>
    <string name="signup">Sign Up</string>
    <string name="signup_uppercase">SIGN UP</string>
    <string name="creating_account">Creating your High Fidelity account</string>
    <string name="signup_email_username_or_password_incorrect">Email, username or password incorrect.</string>
    <string name="signedin_welcome">You are now signed into High Fidelity</string>
    <string name="logged_in_welcome">You are now logged in!</string>
    <string name="welcome">Welcome</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_uppercase">CANCEL</string>
    <string name="get_started">GET STARTED</string>

    <!-- tags -->
    <string name="tagFragmentHome">tagFragmentHome</string>
    <string name="tagFragmentLogin">tagFragmentLogin</string>
    <string name="tagFragmentLoggingIn">tagFragmentLogginIn</string>
    <string name="tagFragmentSignup">tagFragmentSignup</string>
    <string name="tagFragmentPolicy">tagFragmentPolicy</string>
    <string name="tagFragmentPeople">tagFragmentPeople</string>
    <string name="tagFragmentProfile">tagFragmentProfile</string>
    <string name="tagSettings">tagSettings</string>
    <string name="tagFragmentSignedIn">tagFragmentSignedIn</string>
    <string name="settings">Settings</string>
    <string name="AEC">AEC</string>
    <string name="acoustic_echo_cancellation">Acoustic Echo Cancellation</string>
    <string name="settings_developer">Developer</string>
    <string name="log_in">LOG IN</string>
    <string name="keep_me_logged_in">Keep Me Logged In</string>
    <string name="take_me_in_world">No thanks, take me in-world!</string>
    <string name="be_anywere">BE ANYWHERE, WITH ANYONE \nRIGHT NOW</string>
    <string name="steam_log_in">STEAM LOG IN</string>
    <string name="displayName">Name to display</string>
    <string name="ok">OK</string>
    <string name="profile">Avatar</string>
</resources>
