<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/encourage_login_background"
        android:scaleType="fitXY" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B2000000" />

    <ImageView
        android:id="@+id/header"
        android:layout_width="@dimen/header_hifi_width"
        android:layout_height="@dimen/header_hifi_height"
        android:layout_marginTop="@dimen/header_hifi_margin_top"
        android:contentDescription="HighFidelity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hifi_header" />

        <android.support.constraint.ConstraintLayout
        android:id="@+id/profileForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/profile_margin_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible">
        <EditText
            android:id="@+id/displayName"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_marginLeft="@dimen/profile_margin"
            android:layout_marginRight="@dimen/profile_margin"
            android:layout_marginBottom="@dimen/profile_margin"
            android:background="@color/white_opaque"
            android:paddingLeft="@dimen/edit_text_padding"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/login_edit_text_size"
            android:inputType="textCapWords"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/editTextColor"
            android:gravity="left|center_vertical"
            android:hint="@string/displayName"
            app:layout_constraintTop_toTopOf="parent" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/displayName"
                app:layout_constraintBottom_toTopOf="@id/okButton"
                android:layout_marginTop="@dimen/profile_margin_avatars_top"
                android:layout_marginBottom="@dimen/profile_margin_avatars_bottom"
                android:layout_marginLeft="@dimen/profile_margin"
                android:layout_marginRight="@dimen/profile_margin">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/gridview"
                    android:paddingTop="@dimen/list_vertical_padding"
                    android:paddingBottom="@dimen/list_vertical_padding"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </FrameLayout>
            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintLeft_toLeftOf="@id/displayName"
                app:layout_constraintTop_toTopOf="@id/okButton"
                app:layout_constraintBottom_toBottomOf="@id/okButton"
                app:layout_constraintRight_toLeftOf="@id/okButton"
                android:textColor="@color/white_opaque"
                android:fontFamily="@font/raleway_bold"
                android:textSize="@dimen/button_medium_text_size"
                android:text="@string/cancel_uppercase" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="@dimen/button_medium_width"
                android:layout_height="@dimen/button_medium_height"
                android:background="@drawable/rounded_button_color3"
                android:fontFamily="@font/raleway_bold"
                android:layout_marginTop="@dimen/button_medium_margin"
                android:layout_marginBottom="@dimen/button_medium_margin"
                android:text="@string/ok"
                android:textColor="@color/white_opaque"
                android:textAllCaps="false"
                android:textSize="@dimen/button_medium_text_size"
                app:layout_constraintRight_toRightOf="@id/displayName"
                app:layout_constraintBottom_toBottomOf="parent" />
        </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
